--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Covid-19-dash</title>
+  <title>statscovid19</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/logo.svg">
@@ -12,7 +12,7 @@
 <body class="mat-typography light-theme">
   <app-root>
     <div class="loader d-flex justify-content-center align-items-center flex-column">
-      <img style="height: 100px;width: 100px;" src="assets/logo.svg" alt="Covid-19-dash">
+      <img style="height: 100px;width: 100px;" src="assets/logo.svg" alt="statscovid19">
       <div class="cssload-loader">
         <div></div>
         <div></div>
